--- a/offer_project/offers/templates/offers/log.html
+++ b/offer_project/offers/templates/offers/log.html
@@ -15,16 +15,27 @@
     </div>
     <form id="form-company" action="" method="POST">
         {% csrf_token %}
-        <input type="text" placeholder="Електронна пошта">
-        <input type="password" placeholder="Пароль">
+        <input type="text" placeholder="Електронна пошта" name="company_log_email">
+        <input type="password" placeholder="Пароль" name="company_log_password">
+        <p>{{error}}</p>
+        <input type="hidden" name="user_type" value="0">
         <button>Увійти</button>
     </form>
     <form id="form-finder" action="" method="POST">
         {% csrf_token %}
-        <input type="text" placeholder="Електронна пошта">
-        <input type="password" placeholder="Пароль">
+        <input type="text" placeholder="Електронна пошта" name="finder_log_email">
+        <input type="password" placeholder="Пароль" name="finder_log_password">
+        <p>{{error}}</p>
+        <input type="hidden" name="user_type" value="1">
         <button>Увійти</button>
     </form>
 <script src="{% static 'offers/js/log.js' %}"></script>
+<script>
+    const formType = "{{form_type}}";
+    console.log(formType);
+    if (formType === "user"){
+        showFinder()
+    }
+</script>
 </body>
 </html>
