--- a/offer_project/offers/templates/offers/main.html
+++ b/offer_project/offers/templates/offers/main.html
@@ -14,8 +14,10 @@
     <header>
         <img class="logo" src="{% static 'offers/img/logo.png' %}" alt="">
         <input class="search-line" type="search" placeholder="Пошук...">
+        {% if not user.is_authenticated %}
         <a href="/log/">Вхід</a>
         <a href="/reg/">Реєстрація</a>
+        {% endif %}
     </header>
     <main>
         {% for offer in offers %}
